manifests/webhook-config.yaml
# Copyright 2023 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "cel-shim.example.com"
webhooks:
  - name: "cel-shim.example.com"
    rules:
      - apiGroups: ["*"]
        apiVersions: ["*"]
        operations: ["*"]
        resources: ["*"]
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: cel-shim-webhook
        path: /validate
        port: 443
      caBundle: | # REPLACE ME
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNHekNDQWFHZ0F3SUJBZ0lRUWRLZDBYTHE3
[...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
    namespaceSelector:
      matchExpressions:
      - key: metadata.namespace
        operator: NotIn
        values: ["kube-system"]
    objectSelector:
      matchExpressions:
      - key: metadata.labels.app
        operator: NotIn
        values: ["cel-shim-webhook"]
